# fraud_detection

./: .gitignore  README.md  pyproject.toml  structure.txt
.github/workflows/: commit-progress.yml
Models/gat/: GAT.py  pyproject.toml
Models/gcn/: GCN.py  pyproject.toml
Models/mlp/: MLP.py  pyproject.toml
Report/: Link report
config/: accelerate_config.yaml  data_config.yaml  model_config.yaml  training_config.yaml
dataset/: README.md  main.py  name.py  train_test_split.py
dataset/build_graph/: process_node_address_3h.py  process_node_address_all.py  process_node_trans_3h.py
dataset/processed/: b4e_address_graph_3h  b4e_trans_3h
dataset/raw/normal_trans/__MACOSX/: ._normal_eoa_transaction_out_slice_1000K.csv
docs/: dataset_description.md  model_architecture.md  training_guide.md
scripts/: evaluate.sh  preprocess.sh  train.sh
src/: __init__.py  models_mlp
src/data/: __init__.py  augmentation.py  dataset.py  preprocessing.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/models/: __init__.py  base_model.py  cnn_model.py  transformer_model.py
src/training/: __init__.py  loss.py  train.py  trainer.py
src/utils/: __init__.py  config.py  logging.py  wandb_utils.py
